2004-06-07  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/bindings.c:
	* fvwm/builtins.c:
	* fvwm/events.c:
	* fvwm/fvwm.1.in:
	* fvwm/module_interface.c:
	* libs/Bindings.c:
	* libs/Bindings.h:
	* modules/FvwmScript/FvwmScript.c:
	* modules/FvwmScript/Instructions.c:
	Implemented window-specific key/mouse bindings.

	* modules/FvwmIconBox/FvwmIconBox.h:
	* libs/fvwmlib.h:
	* libs/wild.c:
	* libs/wild.h:
	Make args to matchWildcards() const.

2004-06-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ewmh_events.c (ewmh_WMStateFullScreen):
	use EWMH_fullscreen
	* fvwm/ewmh.c (EWMH_fullscreen):
	new function

	* fvwm/add_window.c (AddWindow):
	implemented MAXVERT, MAXHORIZ and FULLSCREEN initial EWMH states

	* fvwm/ewmh_events.c (ewmh_WMStateMaxHoriz):
	(ewmh_WMStateMaxVert):
	(ewmh_WMStateShaded):
	(ewmh_WMStateSticky):
	(ewmh_WMStateStaysOnBottom):
	fixed core dumps
	(ewmh_WMState):
	don't try to maximize window when looking up the style
	(ewmh_WMDesktop):
	(ewmh_WMStateFullScreen):
	(ewmh_WMStateHidden):
	(ewmh_WMStateMaxVert):
	(ewmh_WMStateModal):
	(ewmh_WMStateShaded):
	(ewmh_WMStateSkipPager):
	(ewmh_WMStateSticky):
	(ewmh_WMStateStaysOnBottom):
	fixed ignoring ewmh hints

	* fvwm/expand.c (expand_vars_extended):
	include full path in iconfile and miniiconfile variables

2004-06-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_complex_function):
	(CheckActionType):
	fixed double click patch

2004-06-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ewmh.c (EWMH_SetWMDesktop):
	use 0xFFFFFFFF instead of 0xFFFFFFFE for "sticky across all desks"

2004-05-31  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in (COLORSETS): Moved FvwmTheme description of colorsets
	into fvwm man page.

2004-05-29  Norbert Buchmuller  <norbi@nix.hu>

       * libs/FImage.c (FShmSafeCreateImage):
       Yet another fix to SHM remote client problem

2004-05-26  Francis Litterio  <franl@world.std.com>

	* fvwm/fvwm.1.in
	* fvmw/fvwm.h